--- a/static-web-app/index.html
+++ b/static-web-app/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Your $1 Luck Charm</title>
+  <link rel="icon" type="image/x-icon" href="/static-web-app/favicon.ico">
   <script src="https://js.stripe.com/v3/"></script>
   <style>
     body { font-family: Arial; max-width: 400px; margin: 50px auto; text-align: center; }
