--- a/static-web-app/index.html
+++ b/static-web-app/index.html
@@ -4,7 +4,9 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Your $1 Luck Charm</title>
+  <!-- Favicon with fallback -->
   <link rel="icon" type="image/x-icon" href="/favicon.ico">
+  <link rel="icon" href="data:image/svg+xml;utf8,<svg xmlns=%22http://www.w3.org/2000/svg%22 width=%2232%22 height=%2232%22 viewBox=%220 0 24 24%22><path fill=%22%239c27b0%22 d=%22M7 3.5c-.8.8-2.2.8-2.8 0c-.6-.7 0-1.7.8-2.1c.8-.4 2-.1 2.4.7c.4.7.1 1-.4 1.4zM9.9 4.4c1.7 1.7 3.6 5 3.2 11.2c2.3-6 1.1-9.7-1-12.1c-2-2.2-5-3-8-2.3l-.2.1c3.2.9 4.7 1.8 6 3.1zm-4.9 8c-.7 1-1 2.2-1 3.5c0 3.2 2.5 5.5 5.8 5.1c2.3-.4 4.2-2.4 4.2-4.7c0-1.3-.5-2.1-1.3-2.7c-.8-.5-1.7-.5-2.5-.3c-1.6.5-2.2 1.5-2.2 2.5c0 .5.2 1 .4 1.5c.4.9-.1 1.7-1 1.7c-1.1 0-2.4-1.2-2.4-3.2c0-1.9 1.1-3.4 3-4.2c.4-.2.8-.2 1.3-.2h3.4c.8 0 1.4-.9.9-1.6c-1.2-1.4-3.5-1.8-5.8-1.1c-1.6.5-2.8 1.4-3.8 2.7z%22/></svg>"
   <script src="https://js.stripe.com/v3/"></script>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
